--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "deploying-to-netlify",
   "version": "1.0.0",
   "description": "",
-  "main": "index.htm",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "index.htm"
+    "build": "node app.js"
   },
   "repository": {
     "type": "git",
